syntax = "proto3";
package virt.module;
import "virt/html.proto";
import "virt/css.proto";

message PCModule {
  virt.html.Document html = 1;
  virt.css.Document css = 2;
  repeated PCModuleImport imports = 3;
}

message PCModuleImport {
  oneof inner {
    PCCSSImport css = 1;
    GlobalScript global_script = 2;
  }
}

message PCCSSImport {
  string path = 1;
  virt.css.Document css = 2;
}

message GlobalScript {
  string path = 1;
  optional string content = 2;
}